--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title" >
-                        Eat <span>Healthy</span><br>
-                        Live <span>Better</span>
+                        Eat Healthy
+                        Live Better
                     </h1>
                     <p class="home__description" style="color: #000;">
                         Discover the power of nutritious, organic foods that fuel your body 
